Funcionalidades completas